package TuEvento.Backend.model;

public enum Role {
    ADMIN,
    USER
}
